localization: error messages

--- a/src/main/webapp/partials/account.html
+++ b/src/main/webapp/partials/account.html
@@ -58,8 +58,8 @@
                     <label for="oldPassword" class="col-lg-2 control-label" data-i18n="_old-password_"></label>
                     <div class="col-lg-10">
                         <input type="password" id="oldPassword" name="oldPassword" class="form-control" ng-model="password.oldPassword" required/>
-                        <div class="error"  ng-show="changePasswordForm.oldPassword.$dirty && changePasswordForm.oldPassword.$invalid">Invalid:
-                            <span ng-show="changePasswordForm.oldPassword.$error.required">Specify old password</span>
+                        <div class="error"  ng-show="changePasswordForm.oldPassword.$dirty && changePasswordForm.oldPassword.$invalid">{{'_invalid-field-message_' | i18n}}:
+                            <span ng-show="changePasswordForm.oldPassword.$error.required" data-i18n="_old-password-missed-message_"></span>
                         </div>
                     </div>
                 </div>
@@ -67,8 +67,8 @@
                     <label for="newPassword" class="col-lg-2 control-label" data-i18n="_new-password_"></label>
                     <div class="col-lg-10">
                         <input type="password" id="newPassword" name="newPassword" class="form-control" ng-model="password.newPassword" required/>
-                        <div class="error"  ng-show="changePasswordForm.newPassword.$dirty && changePasswordForm.newPassword.$invalid">Invalid:
-                            <span ng-show="changePasswordForm.newPassword.$error.required">Specify new password</span>
+                        <div class="error"  ng-show="changePasswordForm.newPassword.$dirty && changePasswordForm.newPassword.$invalid">{{'_invalid-field-message_' | i18n}}:
+                            <span ng-show="changePasswordForm.newPassword.$error.required" data-i18n="_new-password-missed-message_"></span>
                         </div>
                     </div>
                 </div>
