--- a/src/main/webapp/partials/admin/users.html
+++ b/src/main/webapp/partials/admin/users.html
@@ -66,7 +66,7 @@
                 <i class="glyphicon glyphicon-refresh" aria-hidden="true"></i>
             </button>
         </span>
-        Users
+        {{'_users_' | i18n}}
     </h4>
 
     <table class="table table-striped">
