--- a/src/main/webapp/partials/authoring/edit-uploads.html
+++ b/src/main/webapp/partials/authoring/edit-uploads.html
@@ -7,12 +7,13 @@
 
     <h3 class="green bold" data-i18n="_edit-uploads_"></h3>
 
-    <h4 data-i18n="_uploaded-docs_">
+    <h4>
         <span class="btn-group">
             <button type="button" class="btn btn-link reset" ng-click="refreshDocuments()">
                 <i class="glyphicon glyphicon-refresh" aria-hidden="true"></i>
             </button>
         </span>
+        {{'_uploaded-docs_' | i18n}}
     </h4>
 
     <div class="row" ng-repeat="s in search">
