--- a/src/main/webapp/partials/authoring/ontology.html
+++ b/src/main/webapp/partials/authoring/ontology.html
@@ -6,12 +6,13 @@
     </div>
 
     <div class="row below">
-    <h3 class="green bold" data-i18n="_ontologies_">
+    <h3 class="green bold">
         <span class="btn-group">
             <button type="button" class="btn btn-link reset" ng-click="refreshOntologies()">
                 <i class="glyphicon glyphicon-refresh" aria-hidden="true"></i>
             </button>
         </span>
+        {{'_ontologies_' | i18n}}
     </h3>
 
     <table class="table table-striped">
