modal layouts fixed

--- a/src/main/webapp/partials/authoring/edit-uploads.html
+++ b/src/main/webapp/partials/authoring/edit-uploads.html
@@ -114,7 +114,7 @@
 
 
     <div class="modal fade scrollable" id="modalDocument">
-        <div class="modal-dialog">
+        <div class="modal-dialog modal-wide">
             <div class="modal-content">
                 <form name="documentForm" class="form-horizontal InputForm" role="form" novalidate>
                     <div class="modal-header">
