--- a/src/main/webapp/partials/authoring/ontology.html
+++ b/src/main/webapp/partials/authoring/ontology.html
@@ -60,6 +60,7 @@
     </div>
 
 <div class="modal fade" id="modalOntology">
+    <div class="modal-dialog">
     <div class="modal-content">
         <div class="modal-header">
             <button type="button" class="close" ng-click="close('#modalOntology')" aria-hidden="true">&times;</button>
@@ -67,10 +68,10 @@
         </div>
 
         <div class="modal-body">
-            <form class="form-horizontal InputForm col-xs-11" role="form" name="typeForm">
+            <form class="form-horizontal InputForm" role="form" name="typeForm">
                 <div class="row">
-                    <label for="source-type" class="col-xs-2 control-label" data-i18n="_import-from_"></label>
-                    <div class="col-xs-10">
+                    <label for="source-type" class="col-xs-4 control-label" data-i18n="_import-from_"></label>
+                    <div class="col-xs-8">
                         <select id="source-type" class="form-control" ng-model="sourceType" ng-options="c.label for c in sourceTypes" ng-change="updateForm()" required></select>
                     </div>
                 </div>
@@ -78,10 +79,10 @@
 
             <!-- Import from file form -->
             <div ng-show="fileElements" class="animate-show">
-                <form class="form-horizontal InputForm col-xs-11" role="form" name="fileForm" novalidate>
+                <form class="form-horizontal InputForm" role="form" name="fileForm" novalidate>
                     <div class="form-group">
-                        <label class="col-xs-2 control-label" data-i18n="_file-input_"></label>
-                        <div class="col-xs-10">
+                        <label class="col-xs-4 control-label" data-i18n="_file-input_"></label>
+                        <div class="col-xs-8">
                             <input type="file" ng-file-select="onFileSelect($files)" name="fileName" accept=".ttl, .rdf">
                         </div>
                     </div>
@@ -90,10 +91,10 @@
 
             <!-- Import from URL form  -->
             <div ng-show="urlElements" class="animate-show">
-                <form name="urlForm" class="form-horizontal InputForm col-xs-11" role="form" novalidate>
+                <form name="urlForm" class="form-horizontal InputForm" role="form" novalidate>
                     <div class="form-group">
-                        <label class="col-xs-2 control-label">URI</label>
-                        <div class="col-xs-10">
+                        <label class="col-xs-4 control-label">URI</label>
+                        <div class="col-xs-8">
                             <input type="text" class="form-control" id="uri" name="uri" placeholder="URI" ng-model="ontology.uri" required unique-identifier/>
                             <div class="error"  ng-show="urlForm.uri.$dirty && urlForm.uri.$invalid">{{'_invalid-field-message_' | i18n}}:
                                 <span ng-show="urlForm.uri.$error.required" data-i18n="_uri-missed-message_"></span>
@@ -109,6 +110,7 @@
             <button type="submit" class="btn-sm btn-primary" ng-click="add();" data-i18n="_add_"></button>
             <button type="button" class="btn-sm btn-default" ng-click="close('#modalOntology')" data-i18n="_cancel_"></button>
         </div>
+    </div>
     </div>
     </div>
 
