--- a/src/main/webapp/css/app.css
+++ b/src/main/webapp/css/app.css
@@ -363,3 +363,23 @@ form{
 .modal-wide {
     width: 70%;
 }
+
+/* table with fixed first column */
+.table-fixed {
+  table-layout: fixed;
+  width: auto !important;
+}
+.col-header {
+  position:absolute;
+  left:0;
+  width:250px;
+}
+.table-fixed-outer {
+    position:relative
+}
+.table-fixed-inner {
+  overflow-x:scroll;
+  overflow-y:visible;
+  width:80%;
+  margin-left:250px;
+}
