First changes for LIMES comparison page, added necessary library for slider, altered ontology to allow MS Sql Server databases.

--- a/src/main/webapp/css/app.css
+++ b/src/main/webapp/css/app.css
@@ -354,3 +354,25 @@ form{
     margin-top: 15px;
     margin-left: 15px;
 }
+
+/* Overflow div */
+
+.maxHeight {
+	height:55vh;
+}
+
+.overflow {
+	overflow-y: scroll;
+	height:100%;
+}
+
+#resultSlider .slider-selection {
+	background: #BABABA;
+}
+
+/* D2RQ */
+
+#patternColumns {
+	max-height: 200px;
+    overflow: auto;
+}
