--- a/src/main/webapp/js/settings/components/components.html
+++ b/src/main/webapp/js/settings/components/components.html
@@ -9,7 +9,6 @@
   <tr>
   	<th>URI</th>
     <th>Name</th>
-    <th>Homepage</th>
     <th>Services</th>
     <th>Version</th>
   </tr>
@@ -17,13 +16,12 @@
 <tbody>
   <tr ng-repeat="component in components">
   	<td>{{component.uri}}</td>
-    <td>{{component.label}}</td>
-    <td>{{component.homepage}}</td>
+    <td><a href="{{component.homepage}}" target="_blanc">{{component.label}}</a></td>
     <td>
-      <div ng-controller="ComponentServicesCtrl" ng-init="getServices(component.uri)">
+      <div ng-init="getServices(component.uri)">
         <ul ng-repeat="service in services">
           <li>{{service.type}}</li>
-          <li tooltip="{{service.description}}">{{service.serviceUrl}}</li>
+          <li tooltip="service.description">{{service.serviceUrl}}</li>
         </ul>
       </div>
     </td>
