added more graphs change updates, and coev application UI

--- a/src/main/webapp/js/workbench/partials/component-header.html
+++ b/src/main/webapp/js/workbench/partials/component-header.html
@@ -2,5 +2,5 @@
 
 <dl class="dl-horizontal">
   <dt>Version:</dt><dd>{{component.version}}</dd>
-  <dt>Homepage:</dt><dd><a href="component.homepage">{{component.homepage}}</a></dd>
+  <dt>Homepage:</dt><dd><a href="{{component.homepage}}">{{component.homepage}}</a></dd>
 </dl>
