--- a/src/main/webapp/js/settings/components/components.html
+++ b/src/main/webapp/js/settings/components/components.html
@@ -15,11 +15,12 @@
 </thead>
 <tbody>
   <tr ng-repeat="component in components">
-  	<td>{{component.uri}}</td>
+  	<td>{{component.uri | shortenURI }}</td>
     <td><a href="{{component.website}}" target="_blanc">{{component.label}}</a></td>
     <td>
       <div ng-repeat="(key, value) in component.services">
-        <dt>{{value.uri}}</dt>
+        <dl>
+          <dt><input type="checkbox" checked="isIntegrated(value.uri)" ng-click="toggleService(value.uri)"> {{value.uri}}</dt>
           <dd>{{value.type}}</dd>
           <dd><a href="{{value.serviceUrl}}" target="_blanc">{{value.serviceUrl}}</a></dd>
         </dl>
