--- a/src/main/webapp/js/workbench/partials/component-header.html
+++ b/src/main/webapp/js/workbench/partials/component-header.html
@@ -3,4 +3,5 @@
 <dl class="dl-horizontal">
   <dt>Version:</dt><dd>{{component.version}}</dd>
   <dt>Homepage:</dt><dd><a href="{{component.homepage}}">{{component.homepage}}</a></dd>
+  <dt>Service:</dt><dd><a href="{{service.serviceUrl}}">{{service.serviceUrl}}</a></dd>
 </dl>
