--- a/src/main/webapp/js/workbench/partials/source-graph.html
+++ b/src/main/webapp/js/workbench/partials/source-graph.html
@@ -1,5 +1,4 @@
-<div class="row">  
-<div class="row">  
+<div class="form-group">
   <label for="sourceGraph" class="col-xs-2 control-label" >{{source.label}}</label>
   <div class="col-xs-8">
     <select id="sourceGraph" class="form-control" ng-model="source.graph" ng-options="namedgraph.name as describeGraph(namedgraph) for namedgraph in readableGraphs" ng-change="sourceChanged()" required>
