--- a/src/main/webapp/js/settings/components/components.html
+++ b/src/main/webapp/js/settings/components/components.html
@@ -3,11 +3,12 @@
 
 
 <p>Current workbench configuration has integrated the following components.</p>
+<div id="components">
 
 <table class="table table-striped" ng-controller="ComponentCtrl">
 <thead>
   <tr>
-    <!-- <th ng-if="isAdminLogged()" >Enabled</th> -->
+    <th ng-if="isAdminLogged()" >Enabled</th>
   	<th>URI</th>
     <th>Name</th>
     <th>Services</th>
@@ -16,7 +17,7 @@
 </thead>
 <tbody>
   <tr ng-repeat="component in components">
-    <td ng-if="isAdminLogged()" ><input type="checkbox" ng-show="isNotRequired(component.uri)" ng-checked="isIntegrated(component.uri)" ng-click="toggleComponent(component.uri)"> </td>
+    <td ng-if="isAdminLogged()" ><input type="checkbox" class="checkbox" ng-show="isNotRequired(component.uri)" ng-checked="isIntegrated(component.uri)" ng-click="toggleComponent(component.uri)"> </td>
   	<td>{{component.uri | shortenURI }}</td>
     <td><a href="{{component.homepage}}" target="_blanc">{{component.label}}</a></td>
     <td>
@@ -34,3 +35,4 @@
 </tbody>
 </table>
 
+</div>
