--- a/src/main/webapp/js/workbench/partials/target-graph.html
+++ b/src/main/webapp/js/workbench/partials/target-graph.html
@@ -1,8 +1,10 @@
 <div class="row">  
-  <label for="targetGraph" class="col-xs-2 control-label" >Target Graph</label>
+  <label for="targetGraph" class="col-xs-2 control-label" >{{graphInfo.label}}</label>
   <div class="col-xs-8">
-    <select id="targetGraph" class="form-control" ng-model="target.graph" ng-options="namedgraph.name as describeGraph(namedgraph) for namedgraph in writableGraphs" ng-change="targetChanged()" required>
+
+    <select id="targetGraph" class="form-control" ng-model="graphInfo.graph" ng-options="namedgraph.name as describeGraph(namedgraph) for namedgraph in writableGraphs" ng-change="notify()" required>
     </select>
+  
   </div>
   <div class="col-xs-2">
     <a class="btn btn-default" ng-click="createTargetGraph();" >New Graph</a>
